# py-booking

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: tests_tasks.toml
src/api/: main.py
src/api/routes/: host.py  router.py
src/domain/entities/: entity.py  host.py  reservation.py
src/domain/enums/: account_status.py
src/domain/value_objects/: address.py  email.py  location.py  phone.py  value_object.py
tests/domain/entities/: test_entity.py  test_host.py
tests/domain/value_objects/: test_value_object.py
